test/white/errors.expected
 ￫ error[E0401]
 ￮ term synthesized type A but is being checked against type Type

 ￫ error[E0502]
 ￮ not enough arguments for a higher-dimensional function application

 ￫ error[E0502]
 ￮ not enough arguments for a higher-dimensional function application

 ￫ error[E0503]
 ￮ not enough arguments to instantiate a higher-dimensional type

 ￫ error[E0501]
 ￮ not enough non-cube variables for higher-dimensional abstraction: need 2 more

 ￫ error[E0501]
 ￮ not enough non-cube variables for higher-dimensional abstraction: need 1 more

 ￫ error[E0700]
 ￮ checking abstraction against non-function type refl A

 ￫ error[E0400]
 ￮ non-synthesizing term in synthesizing position (argument of degeneracy)

 ￫ error[E0600]
 ￮ missing argument for degeneracy refl

 ￫ error[E0601]
 ￮ argument of sym must be at least 2-dimensional

 ￫ error[E0601]
 ￮ argument of sym must be at least 2-dimensional

 ￫ error[E0300]
 ￮ unbound variable: g

 ￫ error[E0504]
 ￮ type not fully instantiated in typechecking

 ￫ error[E0504]
 ￮ type not fully instantiated in typechecking

 ￫ error[E0200]
 ￭ user-supplied term
 1 | x y {` unterminated block comment‹EOF›
   ^ parse error

 ￫ error[E0200]
 ￭ user-supplied term
 1 | f (x‹EOF›
   ^ parse error

 ￫ error[E0200]
 ￭ user-supplied term
 1 | .fst x
   ^ parse error

 ￫ error[E0203]
 ￭ user-supplied term
 1 | x .fs.t y
   ^ invalid field name: .fs.t

 ￫ error[E0204]
 ￭ user-supplied term
 1 | f (con.str. x)
   ^ invalid constructor name: con.str.

 ￫ error[E0300]
 ￮ unbound variable: 0.1.2

 ￫ error[E0202]
 ￮ invalid local variable name: x.y

 ￫ error[E0202]
 ￮ invalid local variable name: x.y

 ￫ error[E0202]
 ￮ invalid local variable name: x.y

 ￫ error[E0200]
 ￭ user-supplied term
 1 | ↦ x
   ^ parse error

 ￫ error[E0200]
 ￮ parse error

 ￫ error[E0100]
 ￮ unification arguments not yet implemented

 ￫ error[E0207]
 ￮ record field fst appears more than once in struct

 ￫ error[E0208]
 ￮ invalid field in struct

 ￫ error[E0208]
 ￮ invalid field in struct

 ￫ error[E0200]
 ￭ user-supplied term
 1 | { _ ↦ a }
   ^ parse error

 ￫ error[E0200]
 ￭ user-supplied term
 1 | { (x) ↦ a }
   ^ parse error

 ￫ error[E0902]
 ￮ record field snd missing in struct

 ￫ error[E0900]
 ￮ checking struct against non-record type A

 ￫ error[E0900]
 ￮ checking struct against non-record type N

 ￫ error[E0800]
 ￮ record type Σ has no field named third

 ￫ error[E1000]
 ￮ canonical type Σ has no constructor named zero

 ￫ error[E1000]
 ￮ canonical type N has no constructor named two

 ￫ error[E1001]
 ￮ too many arguments to constructor zero (1 extra)

 ￫ error[E1001]
 ￮ not enough arguments to constructor suc (need 1 more)

 ￫ error[E0101]
 ￮ unsupported numeral: 21/5

 ￫ error[E0901]
 ￮ can't check a struct against a record Gel with a nonidentity degeneracy applied

 ￫ error[E0506]
 ￮ invalid face: 0-dimensional variable has no face 0

